Comprobar que funcione, es decir con un curl

--- a/.github/workflows/nginx-deploy.yml
+++ b/.github/workflows/nginx-deploy.yml
@@ -2,9 +2,7 @@ name: Docker Dev Build
 
 on:
   push:
-    branches:
-      - main
-      - develop
+    branches: [main, develop]
 
 jobs:
   build:
@@ -12,10 +10,15 @@ jobs:
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v6.0.1
+        uses: actions/checkout@v4
 
       - name: Build Docker image
-        run: docker build -t web-dev .
+        run: docker build -t web-dev -f docker/Dockerfile .
 
       - name: Run container
         run: docker run -d -p 8080:80 web-dev
+
+      - name: Test web server
+        run: |
+          sleep 5
+          curl -I http://localhost:8080
