--- a/.github/workflows/nginx-deploy.yml
+++ b/.github/workflows/nginx-deploy.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Build image
-        run: docker build -t web-prod -f docker/Dockerfile .
+        run: docker build -t web-dev .
 
       - name: Save image
         run: docker save web-prod | gzip > web-prod.tar.gz
